--- a/web-build/manifest.json
+++ b/web-build/manifest.json
@@ -3,5 +3,13 @@
   "lang": "en",
   "name": "pdf-portal",
   "short_name": "pdf-portal",
-  "start_url": "/?utm_source=web_app_manifest"
+  "start_url": "/?utm_source=web_app_manifest",
+  "related_applications": [
+    {
+      "platform": "play",
+      "url": "http://play.google.com/store/apps/details?id=com.lucky2357.pdfportal",
+      "id": "com.lucky2357.pdfportal"
+    }
+  ],
+  "prefer_related_applications": true
 }
