--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "pdf-portal",
   "version": "0.1.0",
   "private": true,
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -15,23 +14,25 @@
     "@react-navigation/drawer": "^6.5.8",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "expo": "~48.0.0",
+    "expo": "~48.0.21",
     "expo-document-picker": "~11.0.0",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.23.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.14",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.2.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "expo-splash-screen": "~0.18.2"
   },
   "devDependencies": {
     "@types/react": "18.0.28",
     "@types/react-native": "0.70.6",
     "eslint": "^8.0.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "@babel/core": "^7.20.0"
   }
 }
